1.2.5 (unreleased)
======
* Rename `Avutil.Channel_layout.get_native_id`
  into `Avutil.Channel_layout.get_mask` with deprecated
  backward-compatible function.

1.2.4 (2025-04-16)
======
* Fix avio max buffer error (#72)

1.2.3 (2025-04-13)
======
* Cleanup C allocations.

1.2.2 (2025-02-04)
======
* Fixed memory leak when an exception is raised
  while initializing a container with a `avio`
  data source.

1.2.1 (2024-10-29)
======
* Fixed plane size when allocating big array planes in `swscale`.
* Added packed big array API to `swscale` where all planes are alloacted in
  on contiguous memory region.

1.2.0 (2024-09-24)
=====
* Removed unused `Av.write_audio_frame`/`Av.write_video_frame`.
* Remove use of deprecated `av_packet_side_data_get`
* Added support to get all streams from output container
* Removed unreliable `Av.was_keyframe`
* Added `on_keyframe` to `Av.write_frame`.
* Switched to new channel layout API.

1.1.11 (2024-03-19)
======
* Fix segfault with the new OCaml 5 concurrent GC.

1.1.10 (2024-01-17)
======
* Fixed codec attribute for AAC.
* Added non-interleaved API for Av.

1.1.9 (2023-10-27)
=====
* Added support for AV_CODEC_ID_WRAPPED_AVFRAME
  as valid audio/video codec.
* Added AV_CODEC_ID_NONE to all codec id classes
  to prevent unecessary failures when passing it
  as detected coded_id.

1.1.8 (2023-07-01)
=====
* Added asynchronous stream copy creation API.
* Added `pkt_dts` API for AVFrame.
* Raise exception when re-using a closed container.
* Move caml_remove_generational_global_root to ocaml finalizers
  to follow OCaml 5 memory model.
* Added `Avutil.Frame.{duration, set_duration}`
* Reset metadata before setting new value.
* Fix min/max filter option values for int and int64 type.
* Add flush API to avfilter.
* Add support for data streams.

1.1.7 (2023-02-08)
=====
* Filter `NaN` when converting floats to and from
  OCaml in `swresample`.

1.1.6 (2022-09-26)
======